FILE(GLOB db ../db/*)
#add_executable(simple simple.cpp ${db})
#add_executable(simple_block simple_block.cpp ${db})
#add_executable(simple_band simple_band.cpp ${db})
cuda_add_executable(simple_band simple_band.cpp ${db})
cuda_add_executable(mat_dim_compare mat_dim_compare.cpp ${db})
cuda_add_executable(mat_band_compare mat_band_compare.cpp ${db})
cuda_add_executable(mat_compare mat_compare.cpp ${db})
